vm/move-prover/tests/sources/functional/serialize_model.exp
Move prover returns: exiting with checking errors
error:

   ┌── tests/sources/functional/serialize_model.move:3:9 ───
   │
 3 │     use 0x1::LCS;
   │         ^^^^^^^^ Invalid 'use'. Unbound module: '0x1::LCS'
   │

error:

    ┌── tests/sources/functional/serialize_model.move:12:18 ───
    │
 12 │         let s1 = LCS::to_bytes(v1);
    │                  ^^^ Unbound module alias 'LCS'
    │

error:

    ┌── tests/sources/functional/serialize_model.move:13:18 ───
    │
 13 │         let s2 = LCS::to_bytes(v2);
    │                  ^^^ Unbound module alias 'LCS'
    │

error:

    ┌── tests/sources/functional/serialize_model.move:28:18 ───
    │
 28 │         let s1 = LCS::to_bytes(v1);
    │                  ^^^ Unbound module alias 'LCS'
    │

error:

    ┌── tests/sources/functional/serialize_model.move:29:18 ───
    │
 29 │         let s2 = LCS::to_bytes(v2);
    │                  ^^^ Unbound module alias 'LCS'
    │
